# rai-takehome

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  coverage.xml  local.db  pyproject.toml
.github/workflows/: ci.yml
docs/: API_SPEC.md  BLUEPRINT.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  TESTPLAN.md  TRD.md
scripts/: generate_seed_data.py  reset_local_db.py
seed_data/: README.md
seed_data/scripts/: generate_seed_data.py  reset_local_db.py  seed_local_db.py
src/: __init__.py
src/adapters/: __init__.py
src/api/: __init__.py
src/app/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  main.py  middleware.py
src/auth/: current_user.py  dependencies.py  exceptions.py  tokens.py
src/domain/: enums.py  errors.py  leave_policy.py  leave_state_machine.py  models.py
src/repositories/: audit_events_repository.py  hcm_configs_repository.py  leave_balances_repository.py  leave_requests_repository.py  script_runs_repository.py  users_repository.py
src/services/: audit_service.py  balances_service.py  leaves_service.py  reconciliation_service.py  scripts_service.py  users_service.py
src/timeoff_microservice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py
tests/api/: test_health_routes.py  test_health_routes_readiness.py  test_leaves_admin_routes.py  test_leaves_employee_routes.py  test_leaves_manager_routes.py  test_mock_hcm_routes.py  test_scripts_routes.py
tests/e2e/: test_ambiguous_hcm_response.py  test_cancel_vs_approve_race.py  test_employee_cancel_flow.py  test_employee_request_happy_path.py  test_employee_request_insufficient_balance.py  test_external_balance_refresh.py  test_manager_approval_flow.py  test_manager_denial_flow.py  test_rate_limit_retry_flow.py  test_repair_pending_reconciliation.py  test_scheduled_sync_all_balances.py
tests/helpers/: __init__.py  app_factory.py  auth.py  clocks.py  db.py  fixtures.py  mock_hcm.py  overrides.py
tests/integration/: test_audit_events_repository.py  (+9 more)
(+55 files in other folders)
