[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeoff-microservice"
version = "0.1.0"
description = "Python backend service for leave workflows, balance sync, mock HCM integration, and scheduled reconciliation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ReadyOn Engineering" }
]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "httpx>=0.27,<1.0",
  "apscheduler>=3.10,<4.0",
  "python-multipart>=0.0.9,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-mock>=3.14,<4.0",
  "mypy>=1.10,<2.0",
  "ruff>=0.5,<1.0",
  "types-requests>=2.32.0.20240622",
  "types-python-dateutil>=2.9.0.20240316",
  "pandocfilters>=1.5,<2.0"
]
test = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-mock>=3.14,<4.0"
]
docs = [
  "pandocfilters>=1.5,<2.0"
]

[project.urls]
Repository = "https://example.com/timeoff-microservice"
Documentation = "https://example.com/timeoff-microservice/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --disable-warnings --cov=src --cov-report=term-missing --cov-report=xml"
testpaths = [
  "tests"
]
pythonpath = [
  "."
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP"
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
  "tests"
]